--- a/src/components/RandomCard/RandomCard.css
+++ b/src/components/RandomCard/RandomCard.css
@@ -1,5 +1,6 @@
 .background-img {
     background-size: cover;
+    background-position: center;
     width: 30rem;
     height: 35.5rem;
     border-radius: 20px;
